<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/price_per_day_spinners_horizontal_margin"
        android:paddingStart="@dimen/price_per_day_spinners_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/month_year_text_views"
                android:text="@string/month" />

            <EditText
                android:id="@+id/edit_text_month_year"
                style="@style/month_year_spinners"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/month_year_text_views"
                android:text="@string/src_port" />

            <Spinner
                android:id="@+id/spinner_src_port"
                style="@style/month_year_spinners" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/month_year_text_views"
                android:text="@string/dst_port" />

            <Spinner
                android:id="@+id/spinner_dst_port"
                style="@style/month_year_spinners" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_prices"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/get_prices" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <TextView
                style="@style/week_day_title"
                android:text="@string/sun" />

            <TextView
                style="@style/week_day_title"
                android:text="@string/mon" />

            <TextView
                style="@style/week_day_title"
                android:text="@string/tue" />

            <TextView
                style="@style/week_day_title"
                android:text="@string/wed" />

            <TextView
                style="@style/week_day_title"
                android:text="@string/thu" />

            <TextView
                style="@style/week_day_title"
                android:text="@string/fri" />

            <TextView
                style="@style/week_day_title"
                android:text="@string/sat" />
        </LinearLayout>

        <GridView
            android:id="@+id/grid_view_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:horizontalSpacing="@dimen/grid_view_price_horizontal_spacing"
            android:numColumns="7"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/grid_view_price_vertical_spacing" />
    </LinearLayout>
</layout>
