...
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ListView
                android:id="@+id/listview_left_drawer"
                style="@style/navigation_drawer_listview" />
        </android.support.v4.widget.DrawerLayout>
    </LinearLayout>
</layout>

